# OpenFMIS

./: .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: .gitignore  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  auth-context.tsx  utils.ts
frontend/src/types/: api.ts
migrations/: env.py
migrations/versions/: 001_initial_auth.py  002_fields.py  003_regions.py  004_field_events.py  005_photos_equipment_preferences_logos.py  006_plss_clu.py  007_plugins.py  008_billing.py  009_satshot.py  010_phase3_remaining.py  011_band_math_engine.py  012_custom_imagery_batch.py
scripts/: load_clu.py  load_plss.py
src/openfmis/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
src/openfmis/api/: router.py
src/openfmis/core/: events.py  plugin_registry.py
src/openfmis/middleware/: cors.py
src/openfmis/models/: __init__.py  base.py  batch_analysis.py  billing.py  clu.py  custom_scene.py  equipment.py  field.py  logo.py  (+13 more)
tests/: conftest.py  test_acl.py  test_auth.py  test_auto_analysis.py  test_band_math.py  test_band_registry.py  test_batch_analysis.py  test_billing.py  test_clu.py  test_equipment.py  test_export.py  test_field_events.py  test_fields.py  test_geometry.py  test_groups.py  test_health.py  test_imagery_export.py  test_import.py  test_logos.py  test_password.py  test_photos.py  test_plss.py  test_plugins.py  test_preferences.py  test_regions.py  test_satshot.py  test_saved_classification.py  test_scene_notification.py  test_spectral_indices_api.py  test_tiles.py  test_users.py  test_vra_prescription.py  test_zone_editing.py
(+104 files in other folders)
