[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openfmis"
version = "0.1.0"
description = "Open Field Management Information System — modern FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "asyncpg>=0.29.0,<1.0",
    "alembic>=1.13.0,<2.0",
    "geoalchemy2>=0.15.0,<1.0",
    "pydantic[email]>=2.7.0,<3.0",
    "pydantic-settings>=2.3.0,<3.0",
    "pyjwt>=2.8.0,<3.0",
    "argon2-cffi>=23.1.0,<24.0",
    "python-multipart>=0.0.9,<1.0",
    "httpx>=0.27.0,<1.0",
    "fiona>=1.10.0,<2.0",
    "shapely>=2.0.0,<3.0",
    "rasterio>=1.3,<2.0",
    "pystac-client>=0.8,<1.0",
    "pyproj>=3.6,<4.0",
    "pillow>=10.0,<11.0",
    "weasyprint>=62.0,<63.0",
    "aiosmtplib>=3.0,<4.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "httpx>=0.27.0,<1.0",
    "ruff>=0.4.0,<1.0",
    "mypy>=1.10.0,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openfmis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning:.*coroutine.*never awaited.*",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
